# swarrm_drone

./: Progress Eksperimental  README.md  Simulation Coding WIth GODOT  issue.txt  start_docker_swarm.sh  tutorial membuat arena godot
devel/: .catkin  local_setup.fish  local_setup.sh  setup.fish
devel/lib/pkgconfig/: catkin.pc  swarm_patrol.pc
devel/lib/python3/dist-packages/catkin/: __init__.py
devel/share/catkin/cmake/: catkinConfig.cmake
devel/share/swarm_patrol/cmake/: swarm_patrolConfig.cmake
src/swarm_patrol/: .bashrc_swarm  .start_docker_swarm.sh.swp  CMakeLists.txt  README_swarm_patrol_MAC.md  fix_environment.sh  package.xml  shutdown_docker_swarm.sh  start_all.sh  start_docker_swarm.sh
src/swarm_patrol/gazebo_models/blueprint_wold/: model.sdf
src/swarm_patrol/launch/: launch_all.launch  launch_rqt_graph.launch  launch_rviz.launch  patrol_2d.launch  swarm_patrol.launch  visualization.launch
src/swarm_patrol/scripts/: battery_display_publisher.py  battery_monitor.py  drone_behavior.py  drone_marker_publisher.py  heartbeat_listener.py  heartbeat_publisher.py  leader_fallback.py  object_detection_2d.py  patrol_controller_2d.py  red_box_marker.py  room_map_marker_publisher.py  web_control_node.py
src/swarm_patrol/ui/: swarm_ui.html
src/swarm_patrol/worlds/: blueprint_world.world
